--- a/RosBridgeClient/Package4UnityEditor/Package4UnityEditor.csproj
+++ b/RosBridgeClient/Package4UnityEditor/Package4UnityEditor.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>RosBridgeClient</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\RosBridgeClient\packages\Newtonsoft.Json.10.0.3\lib\net35\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,8 +43,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="websocket-sharp">
-      <HintPath>..\..\RosBridgeClient\packages\WebSocketSharp.1.0.3-rc11\lib\websocket-sharp.dll</HintPath>
+    <Reference Include="websocket-sharp, Version=1.0.2.59611, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebSocketSharp.1.0.3-rc11\lib\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -53,11 +54,11 @@
     <Compile Include="..\Shared\Message.cs">
       <Link>Message.cs</Link>
     </Compile>
+    <Compile Include="..\Shared\MessageTypes.cs">
+      <Link>MessageTypes.cs</Link>
+    </Compile>
     <Compile Include="..\Shared\Operation.cs">
       <Link>Operation.cs</Link>
-    </Compile>
-    <Compile Include="..\Shared\Plugin.cs">
-      <Link>Plugin.cs</Link>
     </Compile>
     <Compile Include="..\Shared\PointCloud.cs">
       <Link>PointCloud.cs</Link>
@@ -70,10 +71,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy  /D /Y "$(SolutionDir)Package4UnityEditor\bin\$(Configuration)\RosBridgeClient.dll" "$(SolutionDir)..\Unity3D\Assets\RosSharp\Plugins\RosBridgeClient.dll"
+    <PostBuildEvent>xcopy  /D /Y /I "$(SolutionDir)Package4UnityEditor\bin\$(Configuration)\RosBridgeClient.dll" "$(SolutionDir)..\Unity3D\Assets\RosSharp\Plugins\RosBridgeClient.dll"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
